Fixed spacing

--- a/css/sub/5_App_page.css
+++ b/css/sub/5_App_page.css
@@ -113,16 +113,18 @@
     
     .main-grid-container {
         grid-template-columns: 1fr;
+        border: none;
+        border-radius: 0px;
     }
 
     .grid-col-left {
-        padding-top: 3rem;
-        padding-bottom: 3rem;
+        padding-top: 6rem;
+        padding-bottom: 6rem;
     }
 
     .grid-col-right {
         padding-top: 0rem;
-        padding-bottom: 6rem;   
+        padding-bottom: 12rem;   
     }
 
     .progress-graphic {     
